[gd_scene load_steps=2 format=3 uid="uid://dma26aovy6vi7"]

[ext_resource type="Script" path="res://Scripts/menuScript.gd" id="1_ib2ri"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 41.0
scale = Vector2(28.76, 16.12)
size_flags_horizontal = 4
script = ExtResource("1_ib2ri")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.1335
offset_top = -8.58561
offset_right = 56.1335
offset_bottom = 127.414
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.101474, 0.105902)

[node name="Iniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Salir")
mouse_default_cursor_shape = 2
text = "Inicio"

[node name="Multijugador" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Iniciar")
text = "Multi"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Iniciar")
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/Multijugador" to="." method="_on_multijugador_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
